// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AstMetadataInferer should expose metadata.json in parsable format 1`] = `
Object {
  "apiType": "js-api",
  "astNodeTypes": Array [
    "MemberExpression",
  ],
  "isStatic": true,
  "protoChain": Array [
    "document",
    "querySelector",
  ],
  "protoChainId": "document.querySelector",
  "type": "js-api",
}
`;

exports[`AstMetadataInferer should return basic output 1`] = `
Object {
  "apiType": "js-api",
  "astNodeTypes": Array [
    "NewExpression",
  ],
  "isStatic": true,
  "protoChain": Array [
    "AnalyserNode",
  ],
  "protoChainId": "AnalyserNode",
  "type": "js-api",
}
`;

exports[`AstMetadataInferer should write to metadata.json correctly 1`] = `
Object {
  "apiType": "js-api",
  "astNodeTypes": Array [
    "NewExpression",
  ],
  "isStatic": true,
  "protoChain": Array [
    "AnalyserNode",
  ],
  "protoChainId": "AnalyserNode",
  "type": "js-api",
}
`;
